--- a/pom.xml
+++ b/pom.xml
@@ -63,5 +63,11 @@
             <version>42.3.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.200</version>
+        </dependency>
+
     </dependencies>
 </project>
